# Layout-Aware-Metadata-Extraction-Framework

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CODE.md  README.md  pyproject.toml
Notebooks/: arxiv_docbank_pipeline.ipynb  create_metadata_ground_truth.ipynb  data_prep_pipeline.ipynb  eval_metadata_extraction.ipynb  eval_pdf_text_extraction.ipynb  grobid_extract_metadata.ipynb
Notebooks/metadata_extraction/: config.yaml  create_metadata_ground_truth.ipynb  eval_metadata_extraction.ipynb  grobid_config.json  grobid_extract_metadata.ipynb  language_models_extract_metadata.ipynb
Notebooks/pdf_extraction/: arxiv_docbank_pipeline.ipynb  data_prep_pipeline.ipynb  eval_pdf_text_extraction.ipynb
docs/: metadata_extraction.md  pdf_extraction.md
