[project]
name = "layout-aware-metadata-extraction-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.47.0",
    "deepdiff>=8.6.1",
    "feedparser>=6.0.12",
    "grobid-client-python>=0.0.17",
    "ipykernel>=6.30.1",
    "jiwer>=4.0.0",
    "matplotlib>=3.10.6",
    "nbconvert>=7.16.6",
    "nbstripout>=0.8.1",
    "ollama>=0.5.3",
    "pandas>=2.3.2",
    "pdf2image>=1.17.0",
    "pdfminer-six>=20250506",
    "pre-commit>=4.3.0",
    "pydantic>=2.11.9",
    "pymupdf>=1.26.4",
    "pypdf2>=3.0.1",
    "pypdfium2>=4.30.0",
    "python-dotenv>=1.1.1",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.5.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "strsimpy>=0.2.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.1",
    "ultralytics>=8.3.200",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
